# skycrane

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  PLUGIN_INSTALLATION_STRATEGIES.md  README.md  SECURITY.md  code-of-conduct.md  rust-toolchain.toml
.github/workflows/: rust.yml
assets/config/plugins/: scaleway.wat
assets/spec/: plugins.json  v1.proto
crates/plugins/scaleway/: Cargo.toml
crates/plugins/scaleway/src/: lib.rs
crates/plugins/scaleway/src/resources/: networking.rs
crates/skycrane/: Cargo.toml
crates/skycrane/src/: lib.rs  providers.rs
crates/skycrane/src/starlark/: std.rs
crates/skycrane/src/wasm/: engine.rs  plugins.rs
crates/skycrane/tests/: system_tests.rs
crates/skyforge/plugins/hetzner/: Cargo.toml  generate_types.ts
crates/skyforge/plugins/hetzner/api/: cloud.spec.json
crates/skyforge/plugins/hetzner/spec/: types.star
crates/skyforge/sdk/: Cargo.toml
crates/skyforge/sdk/src/: bindings.rs
docs/: book.toml
docs/book/: 404.html  index.html  plugin-interface.html  print.html  searchindex.js  searchindex.json
docs/src/: SUMMARY.md  introduction.md  plugin-interface.md
examples/hetzner/: base.star
examples/scaleway/: provider.toml
scripts/: check-wit.sh  fetch-openapi-schemas.sh  update-wit-deps.sh
spec/wit/: deps.toml  skyforge.v1.wit
src/: commands.rs  lib.rs
src/config/: loader.rs
src/starlark/: loader.rs  mod.rs  std.rs
src/wasm/: engine.rs  mod.rs  plugins.rs
tests/: system_tests.rs
