[package]
name = "skycrane"
version = "0.1.0"
edition = "2021"
authors = ["Victor Palade <victor@cloudflavor.io>"]
description = "Skycrane automates infrastructure"
license = "Apache-2.0"
repository = "https://github.com/cloudflavor/skycrane"
readme = "README.md"
keywords = ["automation", "infrastructure", "wasm", "wasmtime", "webassembly"]
categories = ["command-line-utilities", "wasm"]

[[bin]]
name = "skycrane"
path = "src/bin/skycrane.rs"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow = "1.0.79"
once_cell = "1.19.0"
rust-embed = { version = "8.2.0", features = ["interpolate-folder-path"] }
serde = "1.0.195"
serde_json = "1.0.112"
serde_toml = "0.0.1"
structopt = "0.3.26"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros", "fs"] }
toml = "0.8.8"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
wasi-common = "22.0.0"
wasmtime = "22.0.0"
wasmtime-wasi = "22.0.0"
