[package]
name = "skycrane"
version = "0.1.0"
edition = "2021"
authors = ["Victor Palade <victor@cloudflavor.io>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
serde = "1.0.195"
serde_toml = "0.0.1"
structopt = "0.3.26"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
toml = "0.8.8"
