[package]
name = "hetzner"
version = "0.1.0"
edition = "2021"
authors = ["Victor Palade <victor@cloudflavor.io>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
skyforge-sdk = { path = "../../sdk" }
skyforge-sdk-macros = { path = "../../macros" }
wit-bindgen = "0.43.0"

[package.metadata.component]
package = "cloudflavor:skyforge"
